# invo-display

./: .gitignore  CLAUDE.md  CMakeLists.txt  esp32_architecture.html  inverter_log_20260612_170345.csv  inverter_log_20260612_170722.csv  inverter_log_20260612_181226.csv  inverter_log_20260615_154304.csv  inverter_log_20260615_162339.csv  inverter_log_20260615_162604.csv  sdkconfig.defaults  version.json
.github/workflows/: release.yml
esp32/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  version.json
esp32/main/: CMakeLists.txt  Kconfig.projbuild  fota.c  fota.h  hw_config.h  idf_component.yml  jd9365_init_cmds.h  lvgl_port.c  main.c  modbus_inverter.c  modbus_inverter.h  uart_input.c  uart_input.h  weather_service.c  weather_service.h  wifi_manager.c
main/: CMakeLists.txt  fota.h  idf_component.yml  lvgl_port.h  main.c  wifi_manager.c  wifi_manager.h
pi5/: main.c
pi5/invo/: invo_home.c  invo_screens.c  invo_screens.h  invo_wifi.h
scripts/: invo-esp32-fota-server.service  invo-updater  invo_bridge.py
src/: CMakeLists.txt  Kconfig.projbuild  fota.h  fota_pi.c  lvgl_port.h  lvgl_port_pi.c  main.c  screen_battery.c  screen_load.c  screen_main.c  screen_settings.c  screen_solar.c  screen_wifi.c  uart_input_pi.c  ui_common.c  ui_common.h  weather_service_pi.c  wifi_manager_pi.c
src/bms/: daly_bms.c  daly_bms.h
src/debug/: invo_debug.c  invo_debug.h
src/display/: hal.h  hal_esp32.c  hw_config.h  lvgl_port.c
src/fota/: fota.c  fota.h
src/hal/: hal.h  hal_esp32.c  hal_pi.c
src/inverter/: modbus_inverter.c  modbus_inverter.h  rs485_bus.c  rs485_bus.h
src/invo/: invo_home.c  invo_home.h  invo_screens.c  invo_screens.h  invo_sleep.c  invo_sleep.h  invo_uart.c  invo_uart.h  invo_weather.c  invo_weather.h  invo_wifi.c  lv_font_montserrat_60.c  lv_font_weather_20.c  lv_font_weather_36.c
src/ui/: screen_alerts.c  screen_battery.c  screen_battery_settings.c  screen_history.c  screen_main.c  screen_settings.c  screen_settings_general.c  screen_sleep.c  screen_weather.c  screen_wifi.c  ui_common.c  ui_common.h  weather_icon.c  weather_icon.h
src/wifi/: wifi_manager.h
tools/: invo-updater
