idf_component_register(
    SRCS
        "main.c"
        "wifi_manager.c"
        "weather_service.c"
        "lvgl_port.c"
        "uart_input.c"
        "modbus_inverter.c"
        "fota.c"
        "../src/hal/hal_esp32.c"
        "../src/ui_common.c"
        "../src/screen_main.c"
        "../src/screen_battery.c"
        "../src/screen_solar.c"
        "../src/screen_weather.c"
        "../src/screen_sleep.c"
        "../src/screen_wifi.c"
        "../src/screen_settings.c"
        "../src/screen_history.c"
        "../src/screen_alerts.c"
        "../src/screen_load.c"
        "../src/weather_icon.c"
    INCLUDE_DIRS
        "."
        "../../src"
    REQUIRES
        esp_timer
        esp_driver_gpio
        esp_driver_ledc
        esp_driver_i2c
        esp_lcd
        esp_hw_support
        esp_wifi
        nvs_flash
        esp_event
        esp_netif
        esp_http_client
        mbedtls
        esp_driver_uart
        json
        app_update
        esp_https_ota
)
