idf_component_register(
    SRCS
        "main.c"
        "wifi_manager.c"
        "weather_service.c"
        "lvgl_port.c"
        "uart_input.c"
        "modbus_inverter.c"
        "fota.c"
        "${CMAKE_SOURCE_DIR}/src/hal/hal_esp32.c"
        "${CMAKE_SOURCE_DIR}/src/ui_common.c"
        "${CMAKE_SOURCE_DIR}/src/screen_main.c"
        "${CMAKE_SOURCE_DIR}/src/screen_battery.c"
        "${CMAKE_SOURCE_DIR}/src/screen_solar.c"
        "${CMAKE_SOURCE_DIR}/src/screen_weather.c"
        "${CMAKE_SOURCE_DIR}/src/screen_sleep.c"
        "${CMAKE_SOURCE_DIR}/src/screen_wifi.c"
        "${CMAKE_SOURCE_DIR}/src/screen_settings.c"
        "${CMAKE_SOURCE_DIR}/src/screen_history.c"
        "${CMAKE_SOURCE_DIR}/src/screen_alerts.c"
        "${CMAKE_SOURCE_DIR}/src/screen_load.c"
        "${CMAKE_SOURCE_DIR}/src/weather_icon.c"
    INCLUDE_DIRS
        "."
        "${CMAKE_SOURCE_DIR}/src"
    REQUIRES
        esp_timer
        esp_driver_gpio
        esp_driver_ledc
        esp_driver_i2c
        esp_lcd
        esp_hw_support
        esp_wifi
        nvs_flash
        esp_event
        esp_netif
        esp_http_client
        mbedtls
        esp_driver_uart
        json
        app_update
        esp_https_ota
)
